name:                vinyl
version:             0.8.1.1
synopsis:            Extensible Records
-- description:
license:             MIT
license-file:        LICENSE
author:              Jonathan Sterling
maintainer:          acowley@gmail.com
-- copyright:
category:            Records
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

description: Extensible records for Haskell with lenses.

source-repository head
  type:     git
  location: https://github.com/VinylRecords/Vinyl/

library
  exposed-modules:     Data.Vinyl
                     , Data.Vinyl.ARec
                     , Data.Vinyl.Class.Method
                     , Data.Vinyl.Core
                     , Data.Vinyl.CoRec
                     , Data.Vinyl.Curry
                     , Data.Vinyl.Lens
                     , Data.Vinyl.Derived
                     , Data.Vinyl.TypeLevel
                     , Data.Vinyl.Functor
                     , Data.Vinyl.Notation
                     , Data.Vinyl.Tutorial.Overview
  build-depends:       base >=4.7 && <= 5,
                       ghc-prim,
                       array
  default-language:    Haskell2010
  ghc-options: -fwarn-dodgy-exports -fwarn-dodgy-imports -fwarn-unused-matches -fwarn-unused-imports -fwarn-unused-binds -fwarn-incomplete-record-updates -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-orphans -fwarn-overlapping-patterns -fwarn-tabs -fwarn-type-defaults

benchmark storable
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          StorableBench.hs
  build-depends:    base >= 4.7 && <= 5,
                    vector,
                    criterion,
                    vinyl,
                    mwc-random,
                    microlens,
                    linear,
                    primitive
  ghc-options:      -O2
-- -ddump-to-file -ddump-simpl -dsuppress-module-prefixes -dsuppress-uniques
  default-language: Haskell2010

benchmark equality
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          EqualityBench.hs
  build-depends:    base >= 4.7 && <= 5, criterion, vinyl
  ghc-options:      -O2
  default-language: Haskell2010

benchmark accessors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          AccessorsBench.hs
  build-depends:    base >= 4.7 && <= 5, criterion, tagged, vinyl
  ghc-options:      -O2
  default-language: Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Intro.lhs
  build-depends:    base >= 4.7 && <= 5, lens, vinyl, doctest >= 0.8, singletons >= 0.10
  default-language: Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       CoRecSpec
  build-depends:       base
                     , vinyl
                     , microlens
                     , hspec >= 2.2.4 && < 2.6
                     , should-not-typecheck >= 2.0 && < 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
